# OpenAIWorkshop

./: README.md  pyproject.toml
agentic_ai/agents/: base_agent.py
agentic_ai/agents/agent_service/single_agent/: agent.py
agentic_ai/agents/autogen/multi_agent/: sample_console_agent.py
agentic_ai/agents/semantic_kernel/single_agent/: chat_agent.py
agentic_ai/applications/: backend.py  pyproject.toml  requirements.txt  run_apps.ps1
agentic_ai/backend_services/: mcp_service.py  pyproject.toml  test_mcp_service.py
agentic_ai/backend_services/data/: contoso.db
