[project]
name = "backend-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.6",
    "autogen-ext[mcp]>=0.5.6",
    "dotenv>=0.9.9",
    "faker>=37.1.0",
    "fastmcp>=2.3.0",
    "flasgger>=0.9.7.1",
    "flask>=3.1.0",
    "openai>=1.78.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
]
